--- a/example/index.html
+++ b/example/index.html
@@ -16,7 +16,7 @@
 	
 	<script src="../lib/raphael.js"></script>
 	<!-- <script src="scale.raphael.js"></script> -->
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.js"></script>
+	<script src="../lib/jquery-3.6.0.min.js"></script>
 	<script src="color.jquery.js"></script>
 	<script src="../us-map.js"></script>
 	
