--- a/example/index.html
+++ b/example/index.html
@@ -82,5 +82,25 @@
   
   <button id="over-md">mouseover MD</button> <button id="out-md">mouseout MD</button>
   <div id="map2" style="width: 300px; height: 300px;"></div>
+   <nav class="nav">
+        <ul>
+            <li><a href="index.html">HOME</a></li>
+            <li><a href="contact.html">Profile</a></li>
+        </ul>
+    </nav>
+    <div class="main clearfix">   
+        <div class="box1">
+            <div class="info">
+                <h1>Location:</h1>
+                <ul>
+                    <li>Common Flu:</li>
+                    <li>Cold:</li>
+                    <li>Food Poisoning:</li>
+                </ul>
+            </div>
+        </div>
+	     </div>
+	<footer class="footer">
+    </footer>
 </body>
 </html>
