--- a/example/index.html
+++ b/example/index.html
@@ -75,7 +75,13 @@
 	});
 	</script>
 </head>
-<body>
+<body class="w">
+    <nav class="nav">
+        <ul>
+            <li><a href="index.html">HOME</a></li>
+            <li><a href="contact.html">Profile</a></li>
+        </ul>
+    </nav>
   <div id="alert">Click alerts</div>
   
   <div id="map" style="width: 930px; height: 630px; border: solid 3px red;"></div>
