--- a/example/index.html
+++ b/example/index.html
@@ -13,7 +13,8 @@
 	    font-weight: bold;
 	  }
 	</style>
-	
+	    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/common.css">
 	<script src="../lib/raphael.js"></script>
 	<!-- <script src="scale.raphael.js"></script> -->
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.js"></script>
