--- a/example/index.html
+++ b/example/index.html
@@ -11,6 +11,7 @@
 	    color: #333;
 	    padding: 5px;
 	    font-weight: bold;
+            
 	  }
 	</style>
 	    <link rel="stylesheet" href="css/index.css">
@@ -35,7 +36,7 @@
 	    
 	    'click' : function(event, data) {
 	      $('#alert')
-	        .text('Click '+data.name+' on map 2')
+	        .text('Location: '+data.name+' on map')
 	        .stop()
 	        .css('backgroundColor', '#af0')
 	        .animate({backgroundColor: '#ddd'}, 1000);
@@ -60,7 +61,7 @@
         </ul>
     </nav>
   <div id="alert">Click alerts</div>
-  <div id="map2" style="width: 300px; height: 300px;"></div>
+  <div id="map2" style="width: 600px; height: 600px;"></div>
     <div class="main clearfix">   
         <div class="box1">
             <div class="info">
