--- a/example/index.html
+++ b/example/index.html
@@ -7,6 +7,7 @@
 	  #alert {
 	    font-family: Arial, Helvetica, sans-serif;
 	    font-size: 16px;
+	    width: 25%;
 	    background-color: #ddd;
 	    color: #333;
 	    padding: 5px;
