--- a/example/index.html
+++ b/example/index.html
@@ -8,6 +8,8 @@
 	    font-family: Arial, Helvetica, sans-serif;
 	    font-size: 16px;
 	    width: 25%;
+            margin-right: 10%;
+	    height: 400px;
 	    background-color: #ddd;
 	    color: #333;
 	    padding: 5px;
