--- a/example/index.html
+++ b/example/index.html
@@ -8,7 +8,7 @@
 	    font-family: Arial, Helvetica, sans-serif;
 	    font-size: 16px;
 	    width: 25%;
-            margin-right: 10%;
+            float: right;
 	    height: 400px;
 	    background-color: #ddd;
 	    color: #333;
