--- a/example/index.html
+++ b/example/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>US Map Demo</title>
+	<title>Disease Map</title>
 	
 	<style>
 	  #alert {
@@ -57,6 +57,9 @@
 	</script>
 </head>
 <body class="w">
+    <div class="website_title">
+	    <h1>Disease Map</h1>
+	</div>
     <nav class="nav">
         <ul>
             <li><a href="index.html">HOME</a></li>
