--- a/example/index.html
+++ b/example/index.html
@@ -16,6 +16,9 @@
 	    font-weight: bold;
             
 	  }
+	#website_title {
+		font-size: 50;
+		}
 	</style>
 	    <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/common.css">
@@ -57,7 +60,7 @@
 	</script>
 </head>
 <body class="w">
-    <div class="website_title">
+    <div id="website_title">
 	    <h1>Disease Map</h1>
 	</div>
     <nav class="nav">
