--- a/example/index.html
+++ b/example/index.html
@@ -16,6 +16,12 @@
 	    font-weight: bold;
             
 	  }
+	#website_title {
+		font-size: 80px;
+		float: right;
+		height: 100px;
+		width: 100%;
+		}
 	</style>
 	    <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/common.css">
