--- a/example/index.html
+++ b/example/index.html
@@ -18,9 +18,9 @@
 	  }
 	#website_title {
 		font-size: 80px;
-		float: right;
 		height: 100px;
 		width: 100%;
+		background-color: #fff;
 		}
 	</style>
 	    <link rel="stylesheet" href="css/index.css">
