--- a/example/index.html
+++ b/example/index.html
@@ -66,7 +66,7 @@
 	</div>
     <nav class="nav">
         <ul>
-            <li><a href="index.html">HOME</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="contact.html">Profile</a></li>
         </ul>
     </nav>
