--- a/example/contact.html
+++ b/example/contact.html
@@ -13,7 +13,7 @@
     
     <nav class="nav">
         <ul>
-            <li><a href="index.html">HOME</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="contact.html">Profile</a></li>
         </ul>
     </nav>
@@ -34,8 +34,13 @@
                     <li><input class="btn" type="submit" value="Submit"></li>
                     <li><input class="btn" type="submit" value="New User? Signup"></li>
                 </ul>
-
             </form>
+            <div class="text">
+                <ul>
+                    <li><a href="index.html">HOME</a></li>
+                </ul>
+            </div>
+                    
         </div>
     </div>
 
