--- a/example/contact.html
+++ b/example/contact.html
@@ -32,15 +32,9 @@
                         <label>Password</label><input type="text" class="content" name="content">
                     </li>
                     <li><input class="btn" type="submit" value="Submit"></li>
-                    <li><input class="btn" type="submit" value="New User? Signup"></li>
+                    <li><input class="btn" type="submit" href="index.html" value="New User? Signup"></li>
                 </ul>
-            </form>
-            <div class="text">
-                <ul>
-                    <li><a href="index.html">HOME</a></li>
-                </ul>
-            </div>
-                    
+            </form>            
         </div>
     </div>
 
