--- a/example/contact.html
+++ b/example/contact.html
@@ -32,7 +32,7 @@
                         <label>Password</label><input type="text" class="content" name="content">
                     </li>
                     <li><input class="btn" type="submit" value="Submit"></li>
-                    <li><input class="btn" href="index.html" value="New User? Signup"></li>
+                    <li><input class="btn" type="submit" value="New User? Signup"></li>
                 </ul>
             </form>            
         </div>
