--- a/example/contact.html
+++ b/example/contact.html
@@ -32,9 +32,14 @@
                         <label>Password</label><input type="text" class="content" name="content">
                     </li>
                     <li><input class="btn" type="submit" value="Submit"></li>
-                    <li><input class="btn" type="submit" value="New User? Signup"></li>
+                   
                 </ul>
-            </form>            
+            </form> 
+            <nav class="nav">
+        <ul>
+            <li><a href="index.html">New User? Sign Up</a></li>
+        </ul>
+    </nav>
         </div>
     </div>
 
