--- a/example/contact.html
+++ b/example/contact.html
@@ -35,7 +35,7 @@
                    
                 </ul>
             </form> 
-            <nav class="nav">
+            <nav class="navnewuser">
         <ul>
             <li><a href="index.html">New User? Sign Up</a></li>
         </ul>
