--- a/example/contact.html
+++ b/example/contact.html
@@ -37,7 +37,7 @@
             </form> 
             <nav class="navnewuser">
         <ul>
-            <li><a href="index.html">New User? Sign Up</a></li>
+            <li><f href="index.html">New User? Sign Up</f></li>
         </ul>
     </nav>
         </div>
