--- a/example/contact.html
+++ b/example/contact.html
@@ -35,11 +35,9 @@
                    
                 </ul>
             </form> 
-            <nav class="navnewuser">
-        <ul>
-            <li><f href="index.html">New User? Sign Up</f></li>
-        </ul>
-    </nav>
+            <a href="index.html">
+            <button>New User? Sign Up</button>
+     </a>
         </div>
     </div>
 
