--- a/example/contact.html
+++ b/example/contact.html
@@ -36,7 +36,7 @@
                 </ul>
             </form> 
             <a href="index.html">
-            <button>New User? Sign Up</button>
+            <input class="btn" value="New User? Sign Up">
      </a>
         </div>
     </div>
