--- a/example/usersignup.html
+++ b/example/usersignup.html
@@ -20,7 +20,7 @@
     
     <div class="main">
         <div class="info">
-            <h1>New User Sign Up</h1>
+            <h1>Sign Up</h1>
         </div>
         <div class="text">
             <form action="http://web.engr.oregonstate.edu/~zhangluy/tools/class-content/form_tests/check_request.php" method="POST" name="contact" id="contact">
