--- a/example/contact.html
+++ b/example/contact.html
@@ -35,7 +35,7 @@
                    
                 </ul>
             </form> 
-            <a href="index.html">
+            <a href="usersignup.html">
             <input class="btn" value="  New User? Sign Up Here">
      </a>
         </div>
