--- a/example/index.html
+++ b/example/index.html
@@ -45,7 +45,7 @@
 	      $('#alert')
 	        .text('Location: '+data.name+' on map')
 	        .stop()
-	        .css('backgroundColor', '#af0')
+	        .css('backgroundColor', '#00b7eb')
 	        .animate({backgroundColor: '#ddd'}, 1000);
 	    }
 	  });
