--- a/example/index.html
+++ b/example/index.html
@@ -35,7 +35,7 @@
 	    'stateStyles': {
 	      fill: '#025', 
 	      "stroke-width": 1,
-	      'stroke' : '#036'
+	      'stroke' : '#00b7eb'
 	    },
 	    'stateHoverStyles': {
 	      fill: 'teal'
