--- a/example/index.html
+++ b/example/index.html
@@ -44,6 +44,7 @@
 	    'click' : function(event, data) {
 	      $('#alert')
 	        .text('Location: '+data.name+' on map')
+		.test('Common Flu:')
 	        .stop()
 	        .css('backgroundColor', '#00b7eb')
 	        .animate({backgroundColor: '#ddd'}, 1000);
