--- a/example/index.html
+++ b/example/index.html
@@ -43,7 +43,7 @@
 	    
 	    'click' : function(event, data) {
 	      $('#alert')
-	        .text('Location: '+data.name+''<br>'Common Flue: 0'<br>'Cold: 0'<br>'Food Poisoning: 0')
+	        .text('Location: '+data.name+''\n'Common Flue: 0'\n'Cold: 0'\n'Food Poisoning: 0')
 	        .stop()
 	        .css('backgroundColor', '#00b7eb')
 	        .animate({backgroundColor: '#ddd'}, 1000);
