--- a/example/contact.html
+++ b/example/contact.html
@@ -31,10 +31,13 @@
                     <li>
                         <label>Password</label><input type="text" class="content" name="content">
                     </li>
-                    <li><input class="btn" type="submit" value="Submit"></li>
+                    <!--<li><input class="btn" type="submit" value="Submit"></li>-->
                    
                 </ul>
             </form> 
+            <a href="loggedin.html">
+            <input class="btn" value="Login">
+     </a>
             <a href="usersignup.html">
             <input class="btn" value="  New User? Sign Up Here">
      </a>
