--- a/example/usersignup.html
+++ b/example/usersignup.html
@@ -29,7 +29,16 @@
                         <label>E-mail address:</label><input type="text" name="email">
                     </li>
                     <li>
+                        <label>Username:</label><input type="text" class="content" name="content">
+                    </li>
+                    <li>
                         <label>Password:</label><input type="text" class="content" name="content">
+                    </li>
+                     <li>
+                        <label>First Name:</label><input type="text" class="content" name="content">
+                    </li>
+                     <li>
+                        <label>Last Name:</label><input type="text" class="content" name="content">
                     </li>
                     <li>
                         <label>Diagnosis:</label><input type="text" class="content" name="content">
