--- a/example/loggedin.html
+++ b/example/loggedin.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CS290 Project 5</title>
+    <title>Disease Map</title>
     <link rel="stylesheet" href="css/contact.css">
     <link rel="stylesheet" href="css/common.css">
 </head>
@@ -20,13 +20,13 @@
     
     <div class="main">
         <div class="info">
-            <h1>Sign Up</h1>
+            <h1>Welcome John Smith!</h1>
         </div>
         <div class="text">
             <form action="http://web.engr.oregonstate.edu/~zhangluy/tools/class-content/form_tests/check_request.php" method="POST" name="contact" id="contact">
                 <ul>
                     <li>
-                        <label>E-mail address:</label><input type="text" name="email">
+                        <label>Current Diagnosis:</label><select><option value = "Common Flu"> Common Flu</option><option value = "Cold"> Cold</option><option value = "Food Poisoning"> Food Poisoning</option><option value = "Healthy"> Healthy</option></select> 
                     </li>
                     <li>
                         <label>Username:</label><input type="text" class="content" name="content">
