--- a/example/loggedin.html
+++ b/example/loggedin.html
@@ -22,6 +22,9 @@
         <div class="info">
             <h1>Welcome John Smith!</h1>
         </div>
+         <a href="usersignup.html">
+            <input class="btn" value="Sign Out">
+     </a>
         <div class="text">
             <form action="http://web.engr.oregonstate.edu/~zhangluy/tools/class-content/form_tests/check_request.php" method="POST" name="contact" id="contact">
                 <ul>
