--- a/example/loggedin.html
+++ b/example/loggedin.html
@@ -21,6 +21,8 @@
     <div class="main">
         <div class="info">
             <h1>Welcome John Smith!</h1>
+        </div>
+        <div class="signout">
                      <a href="usersignup.html">
             <input class="btn" value="Sign Out">
      </a>
