--- a/example/loggedin.html
+++ b/example/loggedin.html
@@ -36,8 +36,24 @@
                     </li>
                     <div id="wrapper">
                      <label for="yes_no_radio">Receive Email Notifications?</label>
+                        <p style="
+    font-size: 22px;
+    font-weight: 700;
+    color: #1692c8;
+    margin-left: 23%;
+">
+                        <input type="radio" name="yes_no">No
+                        </p>
                         <p>
                         <input type="radio" name="yes_no" checked>Yes</input>
+                        </p>
+                <p style="
+    font-size: 22px;
+    font-weight: 700;
+    color: #1692c8;
+    margin-left: 23%;
+">
+                        <input type="radio" name="yes_no">No
                         </p>
                             <p>
                         <input type="radio" name="yes_no">No</input>
