--- a/example/usersignup.html
+++ b/example/usersignup.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CS290 Project 5</title>
+    <title>Disease Map</title>
     <link rel="stylesheet" href="css/contact.css">
     <link rel="stylesheet" href="css/common.css">
 </head>
