--- a/example/usersignup.html
+++ b/example/usersignup.html
@@ -55,7 +55,9 @@
                         <input type="radio" name="yes_no">No</input>
                         </p>
                             </div>
-                    <li><input class="btn" type="submit" value="Submit"></li>
+                     <a href="loggedin.html">
+            <input class="btn" value="                 Login">
+     </a>
                    
                 </ul>
             </form> 
