--- a/example/usersignup.html
+++ b/example/usersignup.html
@@ -56,7 +56,7 @@
                         </p>
                             </div>
                      <a href="loggedin.html">
-            <input class="btn" value="                 Login">
+            <input class="btn" value="                Submit">
      </a>
                    
                 </ul>
